--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -131,7 +131,7 @@
        "9  Senior Engineer   55786"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -184,12 +184,12 @@
     "plt.xlabel('Salary in $USD')\n",
     "\n",
     "# Save and export the chart\n",
-    "plt.savefig(\"charts_output/histogram_salries.png\", transparent=False,bbox_inches='tight', dpi=300)\n"
+    "plt.savefig(\"charts_output/histogram_salries.png\", transparent=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -208,7 +208,7 @@
        "Name: salary, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
     "plt.ylabel('Salary in $USD')\n",
     "\n",
     "# Save and export the chart\n",
-    "plt.savefig(\"charts_output/barchar_ave_salries.png\",transparent=False,bbox_inches='tight', dpi=300)\n",
+    "plt.savefig(\"charts_output/barchar_ave_salries.png\",transparent=False)\n",
     "\n"
    ]
   },
